--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
           <li><a href="https://t.me/minios_chat" target="_blank"><svg style="height:21px;">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram"></use>
               </svg> Discussion</a></li>
-          <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs" target="_blank"><svg
+          <li><a href="https://github.com/minios-linux/minios-live/wiki" target="_blank"><svg
                 style="height:21px;">
                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#github"></use>
               </svg> Documentation</a>
@@ -271,7 +271,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="https://t.me/minios_news" target="_blank">News</a></li>
         <li><a href="https://t.me/minios_chat" target="_blank">Discussion</a></li>
-        <li><a href="https://github.com/minios-linux/minios-live/wiki/MiniOS-Docs" target="_blank">Documentation</a>
+        <li><a href="https://github.com/minios-linux/minios-live/wiki" target="_blank">Documentation</a>
         </li>
         <li><a href="https://github.com/minios-linux/minios-live" target="_blank">Source code</a></li>
         <li><a href="#screenshots">Screenshots</a></li>
@@ -312,34 +312,37 @@
   </section>
 
   <!-- Slide 2 (#15) -->
-<section data-name="more" class="slide fade-6 kenBurns">
-  <div class="content">
-    <div class="container">
-      <div class="wrap">
-      
-        <div class="fix-12-12">
-          <ul class="flex verticalCenter">
-            <li class="col-5-12 cell-27">
-              <div class="fix-4-12">
-                <ul>
-                  <li><img class="ae-4" width="305" src="assets/img/Debian-OpenLogo.png" alt="Debian"/></li>
-                </ul>
-              </div>
-            </li>
-            <li class="col-7-12 left">
-              <h1 class="ae-2 fromRight">What is MiniOS?</h1>
-              <div class="ae-3 fromRight">
-                <p class="opacity-8">MiniOS is a portable modular Linux distribution based on Debian, built using minios-live scripts, the main purpose of which is to provide the user with a full-fledged, comfortable working environment for work, entertainment and creativity anywhere on any x86-compatible hardware, saving your personal data on removable &nbsp;media.</p>
-              </div>
-            </li>
-          </ul>
+  <section data-name="more" class="slide fade-6 kenBurns">
+    <div class="content">
+      <div class="container">
+        <div class="wrap">
+
+          <div class="fix-12-12">
+            <ul class="flex verticalCenter">
+              <li class="col-5-12 cell-27">
+                <div class="fix-4-12">
+                  <ul>
+                    <li><img class="ae-4" width="305" src="assets/img/Debian-OpenLogo.png" alt="Debian" /></li>
+                  </ul>
+                </div>
+              </li>
+              <li class="col-7-12 left">
+                <h1 class="ae-2 fromRight">What is MiniOS?</h1>
+                <div class="ae-3 fromRight">
+                  <p class="opacity-8">MiniOS is a portable modular Linux distribution based on Debian, built using
+                    minios-live scripts, the main purpose of which is to provide the user with a full-fledged,
+                    comfortable working environment for work, entertainment and creativity anywhere on any
+                    x86-compatible hardware, saving your personal data on removable &nbsp;media.</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+
         </div>
-        
       </div>
     </div>
-  </div>
-  <div class="background" style="background-image:url(assets/img/background/background-rose.jpg)"></div>
-</section>
+    <div class="background" style="background-image:url(assets/img/background/background-rose.jpg)"></div>
+  </section>
 
   <!-- Slide 3 (#75) -->
   <section data-name="screenshots" class="slide fade-6 kenBurns">
@@ -349,7 +352,8 @@
 
           <div class="fix-10-12 toCenter">
             <h1 class="ae-1">Аttention to detail</h1>
-            <p class="ae-2"><span class="opacity-8">We make MiniOS beautiful so that you can enjoy using it every day and for any task. We pay great attention to every detail in the operating system.</span></p>
+            <p class="ae-2"><span class="opacity-8">We make MiniOS beautiful so that you can enjoy using it every day
+                and for any task. We pay great attention to every detail in the operating system.</span></p>
           </div>
           <div class="fix-12-12">
             <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1"
@@ -461,7 +465,8 @@
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
                   <ul class="p tiny">
                     <!--li><strong>The standard edition</strong></li-->
-                    <li class="opacity-8">includes additional console utilities, non-free firmware, and more user-friendly software.</li>
+                    <li class="opacity-8">includes additional console utilities, non-free firmware, and more
+                      user-friendly software.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-8">Download</a>
@@ -489,7 +494,8 @@
                 <div class="margin-top-3 margin-bottom-3 equalElement ae-9">
                   <ul class="p tiny">
                     <!--li><strong>The ultimate edition</strong></li-->
-                    <li class="opacity-8">includes software for daily use, development, virtualization and PC maintenance.</li>
+                    <li class="opacity-8">includes software for daily use, development, virtualization and PC
+                      maintenance.</li>
                   </ul>
                 </div>
                 <a href="#" class="button green gradient wide cropSides cropBottom ae-10">Download</a>
