--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <script type="text/javascript">
     var userLang = navigator.language || navigator.userLanguage;
     if (userLang == "ru-RU" || userLang == "ru") {
-        window.location.href = "ru.minios.dev";
+        window.location.href = "https://ru.minios.dev";
     }
     else {
-        window.location.href = "en.minios.dev";
+        window.location.href = "https://en.minios.dev";
     };
 </script>
