--- a/index-ru.html
+++ b/index-ru.html
@@ -281,28 +281,28 @@
                     <div class="fix-12-12">
                         <ul class="grid grid-75 masonry fixedSpaces ae-3 controller popupTrigger" data-popup-id="75-1"
                             data-slider-id="75-1">
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-1 fadeIn">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-4 fadeIn">
                                 <img src="assets/img/maximum7.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-2 fadeIn">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-5 fadeIn">
                                 <img src="assets/img/maximum2.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-3 fadeIn">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-6 fadeIn">
                                 <img src="assets/img/maximum3.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-4 fadeIn">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-7 fadeIn">
                                 <img src="assets/img/maximum4.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-2 fadeIn">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-5 fromRight">
                                 <img src="assets/img/maximum5.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-3 fadeIn">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-6 fromRight">
                                 <img src="assets/img/maximum6.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-4 fadeIn">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-7 fromRight">
                                 <img src="assets/img/maximum8.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
-                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-5 fadeIn">
+                            <li class="col-3-12 col-tablet-1-3 col-phablet-1-2 col-phone-1-1 ae-8 fromRight">
                                 <img src="assets/img/maximum9.jpg" class="wide rounded margin-bottom-1" alt="Image" />
                             </li>
                         </ul>
