--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -36,6 +36,11 @@
     <!-- SVG Library -->
     <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
 
+        <symbol id="apple" viewBox="-1 1 24 24">
+            <path
+                d="M17.6 13.8c0-3 2.5-4.5 2.6-4.6-1.4-2.1-3.6-2.3-4.4-2.4-1.9-.2-3.6 1.1-4.6 1.1-.9 0-2.4-1.1-4-1-2 0-3.9 1.2-5 3-2.1 3.7-.5 9.1 1.5 12.1 1 1.5 2.2 3.1 3.8 3 1.5-.1 2.1-1 3.9-1s2.4 1 4 1 2.7-1.5 3.7-2.9c1.2-1.7 1.6-3.3 1.7-3.4-.1-.1-3.2-1.3-3.2-4.9zm-3.1-9c.8-1 1.4-2.4 1.2-3.8-1.2 0-2.7.8-3.5 1.8-.8.9-1.5 2.3-1.3 3.7 1.4.1 2.8-.7 3.6-1.7z" />
+        </symbol>
+
         <symbol id="logo" viewBox="0 0 106 25">
             <title>MiniOS</title>
             <path
@@ -155,14 +160,16 @@
                                         class="opacity-8">Скажите спасибо, что мы не поставили вам на закачку сразу все
                                         дистрибутивы.</span></p>
                                 <p class="ae-7 fromTop verticalCenter reverse"><span class="opacity-8">На сайте
-                                        представлены не все варианты сборки MiniOS (всего их 18). Если у вас возникли трудности с
+                                        представлены не все варианты сборки MiniOS (всего их 18). Если у вас возникли
+                                        трудности с
                                         выбором, напишите <a href="#"><svg style="height:19px; width:21px">
                                                 <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#telegram">
                                                 </use>
                                             </svg>нам</a>, мы &nbsp;поможем.</span>
-                                            <p></p>
+                                    </wrap>
                                     <a href="#downloads"
-                                        class="button purple gradient ae-8 fromLeft cropLeft">Посмотреть все стабильные
+                                        class="button purple gradient ae-8 fromLeft cropLeft">Посмотреть
+                                        все стабильные
                                         сборки</a>
                                     <a href="#more" class="button red gradient ae-9 fromRight">Посмотреть ночные
                                         сборки</a>
