--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -139,7 +139,7 @@
     </svg>
 
     <!-- Slide 1 (#34) -->
-    <section class="slide fade-6 kenBurns">
+    <!--section class="slide fade-6 kenBurns">
         <div class="content">
             <div class="container">
                 <div class="wrap">
@@ -175,11 +175,52 @@
             </div>
         </div>
         <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
-    </section>
-    <p>The download should start shortly. If it doesn't, click
-        <a data-auto-download
-            href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-ultra-ru-amd64-zstd.iso">here</a>.
-    </p>
+    </section-->
+
+<!-- Slide 5 (#85) -->
+<section class="slide fade-6 kenBurns">
+    <div class="content">
+      <div class="container">
+        <div class="wrap">
+        
+          <div class="fix-7-12">
+            <h1 class="ae-1 fromTop"><svg style="width:153px;height:35px">
+                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
+            </svg></h1>
+            <ul class="grid grid-85 equal margin-top-5 ae-2 fromCenter" data-equal-collapse-width="767">
+            <p class="ae-6 fromTop"><span class="opacity-8">Загрузка скоро начнётся, если не
+                    началась, нажмите </span><a href="#downloads">тута</a>. <span
+                    class="opacity-8">Скажите спасибо, что мы не поставили вам на закачку сразу все
+                    дистрибутивы.</span></p>
+            <p class="ae-7 fromTop verticalCenter reverse"><span class="opacity-8">На сайте
+                    представлены не все варианты сборки MiniOS, рекомендуем попробовать:
+              <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 margin-bottom-2 ae-3">
+                <div class="pad" style="background: #F5FBFE">
+                  <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
+                    <ul class="p tiny">
+                      <li class="opacity-8">Все стабильные версии, включая сборки на базе Debian Buster, Debian Sid, сборки с архитектурой i386 и сборки с поддержкой aufs.</li>
+                    </ul>
+                  </div>
+                  <a href="#" class="button green gradient wide cropSides cropBottom ae-7">Попробовать</a>
+                </div>
+              </li>
+              <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 ae-4">
+                <div class="pad">
+                    <ul class="p tiny">
+                      <li class="opacity-8">Все тестовые версии (могут содержать ошибки, но чаще всего работоспособные), включая сборки на базе Debian Buster, Debian Sid, сборки с архитектурой i386 и сборки с поддержкой aufs.</li>
+                    </ul>
+                  </div>
+                  <a href="#" class="button red gradient wide cropSides cropBottom ae-8">Попробовать</a>
+                </div>
+              </li>
+            </ul>
+          </div> 
+          
+        </div>
+      </div>
+    </div>
+    <div class="background" style="background-image:url(assets/img/background/img-85.jpg)"></div>
+  </section>
 
     <script>
         $(function () {
