--- a/download-ultra-ru.html
+++ b/download-ultra-ru.html
@@ -48,85 +48,7 @@
                 d="M 43.551886,30.059555 H 23.616475 v -7.367011 h 19.935411 l 3.681062,3.68595 z m 0,-7.367011 c 2.033627,0 3.681062,1.652322 3.681062,3.68595 0,2.028739 -1.647435,3.681061 -3.681062,3.681061 z M 23.616475,49.999856 v -7.367011 0 l 0.840826,-0.01965 0.826161,-0.06357 0.811495,-0.102652 0.801719,-0.14177 0.787052,-0.180889 0.767499,-0.220006 0.752833,-0.254211 0.738167,-0.293329 0.718615,-0.32262 0.699058,-0.361739 0.684395,-0.390939 0.659952,-0.420416 0.635507,-0.454631 0.615954,-0.483961 0.586624,-0.508411 0.567069,-0.542622 0.537739,-0.562182 0.513294,-0.591513 0.483966,-0.615953 0.449743,-0.63551 0.425303,-0.659952 0.391081,-0.684393 0.356862,-0.69906 0.327534,-0.718612 0.288454,-0.738168 0.259086,-0.752833 0.215093,-0.772388 0.180888,-0.782163 0.146646,-0.801721 0.102652,-0.811494 0.06357,-0.826161 0.01965,-0.840827 h 7.362121 l -0.02948,1.207466 -0.09286,1.202578 -0.151522,1.178136 -0.205341,1.163468 -0.264,1.148804 -0.317745,1.119474 -0.371527,1.099917 -0.425307,1.075478 -0.474183,1.046144 -0.518184,1.016813 -0.57196,0.992371 -0.615953,0.958152 -0.655064,0.923928 -0.703944,0.894602 -0.738168,0.855496 -0.782162,0.816382 -0.821276,0.782165 -0.855492,0.743055 -0.889714,0.699057 -0.928819,0.659951 -0.958151,0.615957 -0.987483,0.567069 -1.016814,0.523071 -1.051033,0.474187 -1.070587,0.420416 -1.099919,0.371527 -1.119473,0.322621 -1.148803,0.264 -1.158581,0.205304 -1.183023,0.151521 -1.197691,0.08799 z M 0,26.378494 h 7.3621217 v 0 l 0.01954,0.840827 0.063553,0.826161 0.1026595,0.811494 0.1466532,0.801718 0.1808768,0.782166 0.2150967,0.772388 0.2590903,0.752833 0.2884232,0.738167 0.3275338,0.718613 0.3568629,0.703948 0.3910824,0.679505 0.4253015,0.659952 0.449744,0.635509 0.483964,0.615953 0.513296,0.591513 0.537738,0.562179 0.567069,0.542626 0.586624,0.508411 0.615953,0.483961 0.635509,0.454631 0.659951,0.420416 0.679506,0.391083 0.703947,0.361738 0.718614,0.322621 0.738166,0.293329 0.752836,0.254211 0.767498,0.220006 0.787053,0.180888 0.801718,0.14177 0.811496,0.102652 0.82616,0.06357 0.840828,0.01965 V 50 l -1.212338,-0.03439 -1.19769,-0.08799 -1.183024,-0.151521 -1.163468,-0.205304 -1.143916,-0.264 L 16.596556,48.934136 15.496638,48.562608 14.421155,48.142215 13.37501,47.668028 12.358196,47.144957 11.365825,46.577888 10.407674,45.961931 9.4837424,45.30198 8.5940308,44.602923 7.738538,43.859868 6.9172658,43.082589 6.1351014,42.261317 5.3920454,41.405825 4.692986,40.511223 4.037923,39.587295 3.4219688,38.629143 2.8500113,37.636772 2.3318275,36.619957 1.8576403,35.573813 1.4323385,34.498337 1.0608104,33.398418 0.7430561,32.278945 0.47907567,31.130142 0.27375746,29.966672 0.12221315,28.788538 0.02933121,27.58596 Z M 27.297535,6.4381926 h -7.362121 l 3.681061,3.6810604 -0.840827,0.01956 -0.826161,0.06355 -0.811495,0.102659 -0.801719,0.146655 -0.787053,0.180876 -0.767497,0.215095 -0.752836,0.259092 -0.738167,0.288423 -0.718613,0.327531 -0.703948,0.356864 -0.679505,0.391081 -0.659952,0.420413 -0.635509,0.454634 -0.615953,0.483964 -0.586624,0.513295 -0.567069,0.537739 -0.537737,0.567068 -0.513296,0.586624 -0.483965,0.615954 -0.449744,0.640397 -0.4253018,0.659951 -0.391082,0.679505 -0.3568629,0.699062 -0.32753,0.718613 -0.2884232,0.738167 -0.2590904,0.752833 -0.2150966,0.772388 -0.1808768,0.782166 -0.146657,0.801717 -0.1026595,0.816384 -0.063549,0.826161 -0.01954,0.840827 H 0 L 0.02933049,25.166139 0.12221156,23.968451 0.27375535,22.785428 0.47907355,21.621957 0.74305399,20.478042 1.0608082,19.353681 1.4323364,18.253762 1.8576382,17.183174 2.3318254,16.132141 2.8500091,15.115328 3.4219667,14.122957 4.0379211,13.164805 4.6929841,12.240873 5.3920431,11.351162 6.1350992,10.490781 6.9172635,9.6743972 7.7385361,8.8922325 8.5940286,8.1491764 9.4837405,7.4501174 10.407673,6.790166 11.365823,6.1791008 12.358194,5.607142 13.375007,5.0889583 14.421153,4.6147721 15.496628,4.1894696 16.596547,3.8179417 17.71602,3.5001871 l 1.143916,-0.2639797 1.163469,-0.2102066 1.183023,-0.1466524 1.197688,-0.092889 1.212357,-0.029334 z m -3.68106,-3.681061 c 2.033626,0 3.68106,1.6474342 3.68106,3.681061 0,2.0336269 -1.647434,3.6810604 -3.68106,3.6810604 z M 19.935414,26.378494 V 6.4381926 h 7.362121 V 26.378494 l -3.68106,3.681061 z m 7.362121,0 c 0,2.028739 -1.647434,3.681061 -3.68106,3.681061 -2.033627,0 -3.681061,-1.652322 -3.681061,-3.681061 z m 0,-22.6974308 V 26.378494 H 19.935414 V 3.6810632 L 23.616475,1.9333379e-6 Z m -7.362121,0 c 0,-2.0336272 1.647434,-3.6810612666621 3.681061,-3.6810612666621 2.033626,0 3.68106,1.6474340666621 3.68106,3.6810612666621 z M 46.313907,30.059555 V 22.697432 L 42.632845,26.378494 42.608278,25.3959 42.534955,24.427972 42.412725,23.47471 42.246501,22.541 42.031409,21.621957 41.777198,20.722468 41.478993,19.837644 41.136795,18.977265 40.760528,18.136438 40.340112,17.315165 39.88059,16.518334 39.386851,15.745948 38.853998,15.002891 38.291816,14.284278 37.690529,13.590107 37.059907,12.930156 36.399957,12.299536 35.710675,11.703135 34.992062,11.136067 34.244117,10.608105 33.471729,10.109475 32.674899,9.6548427 31.858515,9.2344293 31.017689,8.8531246 30.15242,8.5158162 29.272484,8.2176157 28.372995,7.9585239 27.453951,7.7483172 26.515354,7.5821064 25.566981,7.4598932 24.599053,7.3865651 23.616459,7.3621225 V 0 l 1.354122,0.0342201 1.334567,0.10266022 1.319902,0.16621432 1.300349,0.23464922 1.275905,0.29331017 1.256352,0.35686257 1.22702,0.4155252 1.197689,0.4692984 1.168358,0.5328491 1.139029,0.581736 1.104805,0.6355075 1.070586,0.6843948 1.031482,0.7381676 0.997258,0.7772755 0.958152,0.8310488 0.914154,0.8750469 0.875044,0.9141545 0.826163,0.9532628 0.782165,0.9972603 0.738168,1.036367 0.684393,1.065699 0.635508,1.104807 0.581738,1.139027 0.527962,1.168358 0.474183,1.202577 0.415525,1.227022 0.356863,1.251461 0.293291,1.275906 0.229757,1.300348 0.1711,1.319902 0.09774,1.339457 0.03439,1.354122 z m 3.676172,-3.681061 c 0,2.028739 -1.647432,3.681061 -3.676172,3.681061 -2.033627,0 -3.681062,-1.652322 -3.681062,-3.681061 z M 23.616475,22.697432 h 22.697432 v 7.362123 H 23.616475 l -3.681061,-3.681061 z m 0,7.362123 c -2.033627,0 -3.681061,-1.652322 -3.681061,-3.681061 0,-2.033628 1.647434,-3.681062 3.681061,-3.681062 z" />
         </symbol>
 
-        <symbol id="close" viewBox="0 0 30 30">
-            <path
-                d="M15 0c-8.3 0-15 6.7-15 15s6.7 15 15 15 15-6.7 15-15-6.7-15-15-15zm5.7 19.3c.4.4.4 1 0 1.4-.2.2-.4.3-.7.3s-.5-.1-.7-.3l-4.3-4.3-4.3 4.3c-.2.2-.4.3-.7.3s-.5-.1-.7-.3c-.4-.4-.4-1 0-1.4l4.3-4.3-4.3-4.3c-.4-.4-.4-1 0-1.4s1-.4 1.4 0l4.3 4.3 4.3-4.3c.4-.4 1-.4 1.4 0s.4 1 0 1.4l-4.3 4.3 4.3 4.3z" />
-        </symbol>
-
-        <symbol id="close-small" viewBox="0 0 11 11">
-            <path
-                d="M6.914 5.5l3.793-3.793c.391-.391.391-1.023 0-1.414s-1.023-.391-1.414 0l-3.793 3.793-3.793-3.793c-.391-.391-1.023-.391-1.414 0s-.391 1.023 0 1.414l3.793 3.793-3.793 3.793c-.391.391-.391 1.023 0 1.414.195.195.451.293.707.293s.512-.098.707-.293l3.793-3.793 3.793 3.793c.195.195.451.293.707.293s.512-.098.707-.293c.391-.391.391-1.023 0-1.414l-3.793-3.793z" />
-        </symbol>
-
-        <symbol id="arrow-left" viewBox="0 0 29 56">
-            <path
-                d="M28.7.3c.4.4.4 1 0 1.4l-26.3 26.3 26.3 26.3c.4.4.4 1 0 1.4-.4.4-1 .4-1.4 0l-27-27c-.4-.4-.4-1 0-1.4l27-27c.3-.3 1-.4 1.4 0z" />
-        </symbol>
-
-        <symbol id="arrow-right" viewBox="0 0 29 56">
-            <path
-                d="M.3 55.7c-.4-.4-.4-1 0-1.4l26.3-26.3-26.3-26.3c-.4-.4-.4-1 0-1.4.4-.4 1-.4 1.4 0l27 27c.4.4.4 1 0 1.4l-27 27c-.3.3-1 .4-1.4 0z" />
-        </symbol>
-
-        <symbol id="back" viewBox="0 0 20 20">
-            <path
-                d="M2.3 10.7l5 5c.4.4 1 .4 1.4 0s.4-1 0-1.4l-3.3-3.3h11.6c.6 0 1-.4 1-1s-.4-1-1-1h-11.6l3.3-3.3c.4-.4.4-1 0-1.4-.2-.2-.4-.3-.7-.3s-.5.1-.7.3l-5 5c-.2.2-.3.5-.3.7 0 .2.1.5.3.7z" />
-        </symbol>
-
-        <symbol id="menu" viewBox="0 0 18 18">
-            <path
-                d="M16 5h-14c-.6 0-1-.4-1-1 0-.5.4-1 1-1h14c.5 0 1 .4 1 1s-.4 1-1 1zm-14 5h14c.5 0 1-.4 1-1 0-.5-.4-1-1-1h-14c-.6 0-1 .4-1 1s.4 1 1 1zm14 3h-14c-.5 0-1 .4-1 1 0 .5.4 1 1 1h14c.5 0 1-.4 1-1s-.4-1-1-1z" />
-        </symbol>
-
-        <symbol id="share" viewBox="0 0 18 18">
-            <path
-                d="M16 8c-.6 0-1 .4-1 1v6h-12v-6c0-.6-.4-1-1-1s-1 .4-1 1v6c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2v-6c0-.6-.4-1-1-1zm-2.3-2.3c.4-.4.4-1 0-1.4l-4-4c-.4-.4-1-.4-1.4 0l-4 4c-.4.4-.4 1 0 1.4s1 .4 1.4 0l2.3-2.3v7.6c0 .6.4 1 1 1s1-.4 1-1v-7.6l2.3 2.3c.4.4 1 .4 1.4 0z" />
-        </symbol>
-
-        <symbol id="arrow-down" viewBox="0 0 24 24">
-            <path
-                d="M12 18c-.2 0-.5-.1-.7-.3l-11-10c-.4-.4-.4-1-.1-1.4.4-.4 1-.4 1.4-.1l10.4 9.4 10.3-9.4c.4-.4 1-.3 1.4.1.4.4.3 1-.1 1.4l-11 10c-.1.2-.4.3-.6.3z" />
-        </symbol>
-
-        <symbol id="arrow-up" viewBox="0 0 24 24">
-            <path
-                d="M11.9 5.9c.2 0 .5.1.7.3l11 10c.4.4.4 1 .1 1.4-.4.4-1 .4-1.4.1l-10.4-9.4-10.3 9.4c-.4.4-1 .3-1.4-.1-.4-.4-.3-1 .1-1.4l11-10c.1-.2.4-.3.6-.3z" />
-        </symbol>
-
-        <symbol id="arrow-top" viewBox="0 0 18 18">
-            <path
-                d="M15.7 7.3l-6-6c-.4-.4-1-.4-1.4 0l-6 6c-.4.4-.4 1 0 1.4.4.4 1 .4 1.4 0l4.3-4.3v11.6c0 .6.4 1 1 1s1-.4 1-1v-11.6l4.3 4.3c.2.2.4.3.7.3s.5-.1.7-.3c.4-.4.4-1 0-1.4z" />
-        </symbol>
-
-        <symbol id="play" viewBox="0 0 30 30">
-            <path d="M7 30v-30l22 15z" />
-        </symbol>
-
-        <symbol id="chat" viewBox="0 0 18 18">
-            <path
-                d="M5,17c-0.2,0-0.3,0-0.4-0.1C4.2,16.7,4,16.4,4,16v-2H2c-1.1,0-2-0.9-2-2V3c0-1.1,0.9-2,2-2h14c1.1,0,2,0.9,2,2v9 c0,1.1-0.9,2-2,2H9.3l-3.7,2.8C5.4,16.9,5.2,17,5,17z M2,12h3.5C5.8,12,6,12.2,6,12.5V14l2.4-1.8C8.6,12.1,8.8,12,9,12h7V3H2V12z M13,7H5C4.4,7,4,6.6,4,6s0.4-1,1-1h8c0.6,0,1,0.4,1,1S13.6,7,13,7z M13,10H5c-0.6,0-1-0.4-1-1s0.4-1,1-1h8c0.6,0,1,0.4,1,1 S13.6,10,13,10z" />
-        </symbol>
-
-        <symbol id="mail" viewBox="0 0 18 18">
-            <path
-                d="M16 2h-14c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-10c0-1.1-.9-2-2-2zm0 2v.5l-7 4.3-7-4.4v-.4h14zm-14 10v-7.2l6.5 4c.1.1.3.2.5.2s.4-.1.5-.2l6.5-4v7.2h-14z" />
-        </symbol>
-
-        <symbol id="sound-on" viewBox="0 0 18 18">
-            <path
-                d="M8.5,0.1C8.1-0.1,7.7,0,7.4,0.2L3.7,3H2C0.9,3,0,3.9,0,5v6c0,1.1,0.9,2,2,2h1.7l3.7,2.8C7.6,15.9,7.8,16,8,16 c0.2,0,0.3,0,0.4-0.1C8.8,15.7,9,15.4,9,15V1C9,0.6,8.8,0.3,8.5,0.1z M7,13l-2.4-1.8C4.4,11.1,4.2,11,4,11l-2,0l0-6h2 c0.2,0,0.4-0.1,0.6-0.2L7,3V13z M11.7,9.9l0.7,1.9C13.9,11.2,15,9.7,15,8c0-1.7-1.1-3.2-2.7-3.8l-0.7,1.9C12.5,6.4,13,7.2,13,8C13,8.9,12.5,9.6,11.7,9.9z M12.2,1.1l-0.3,2C14.3,3.5,16,5.6,16,8s-1.8,4.5-4.2,4.9l0.3,2C15.6,14.3,18,11.4,18,8C18,4.6,15.6,1.7,12.2,1.1z" />
-        </symbol>
-
-        <symbol id="sound-off" viewBox="0 0 18 18">
-            <path
-                d="M15.9,8l1.8-1.8c0.4-0.4,0.4-1,0-1.4s-1-0.4-1.4,0l-1.8,1.8l-1.8-1.8c-0.4-0.4-1-0.4-1.4,0s-0.4,1,0,1.4L13.1,8l-1.8,1.8 c-0.4,0.4-0.4,1,0,1.4c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3l1.8-1.8l1.8,1.8c0.2,0.2,0.5,0.3,0.7,0.3s0.5-0.1,0.7-0.3 c0.4-0.4,0.4-1,0-1.4L15.9,8z M8.5,0.1C8.1-0.1,7.7,0,7.4,0.2L3.7,3H2C0.9,3,0,3.9,0,5v6c0,1.1,0.9,2,2,2h1.7l3.7,2.8C7.6,15.9,7.8,16,8,16 c0.2,0,0.3,0,0.4-0.1C8.8,15.7,9,15.4,9,15V1C9,0.6,8.8,0.3,8.5,0.1z M7,13l-2.4-1.8C4.4,11.1,4.2,11,4,11l-2,0l0-6h2 c0.2,0,0.4-0.1,0.6-0.2L7,3V13z" />
-        </symbol>
-
         <!-- social -->
-        <symbol id="youtube" viewBox="0 0 24 24">
-            <path
-                d="M23.6 6.3c-.3-1.2-1.4-2.2-2.6-2.3-3-.3-6-.3-9-.3s-6 0-9 .3c-1.2.1-2.3 1.1-2.6 2.3-.4 1.8-.4 3.8-.4 5.7 0 1.9 0 3.9.4 5.7.3 1.2 1.4 2.2 2.6 2.3 3 .3 6 .3 9 .3s6 0 9-.3c1.3-.1 2.3-1.1 2.6-2.4.4-1.7.4-3.7.4-5.6 0-1.9 0-3.9-.4-5.7zm-14.1 9v-6.6l6.5 3.3-6.5 3.3z" />
-        </symbol>
         <symbol id="github" viewBox="0 0 24 24">
             <path
                 d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
@@ -138,51 +60,65 @@
 
     </svg>
 
-<!-- Slide 5 (#85) -->
-<section class="slide fade-6 kenBurns">
-    <div class="content">
-      <div class="container">
-        <div class="wrap">
-        
-          <div class="fix-7-12">
-            <h1 class="ae-1 fromTop"><svg style="width:153px;height:35px">
-                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
-            </svg></h1>
-            <ul class="grid grid-85 equal margin-top-5 ae-2 fromCenter" data-equal-collapse-width="767">
-            <p class="ae-6 fromTop"><span class="opacity-8">Загрузка скоро начнётся, если не
-                    началась, нажмите </span><a href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-ultra-ru-amd64-zstd.iso" data-auto-download>тута</a>. <span
-                    class="opacity-8">Скажите спасибо, что мы не поставили вам на закачку сразу все
-                    дистрибутивы.</span></p>
-            <p class="ae-7 fromTop verticalCenter reverse"><span class="opacity-8">На сайте
-                    представлены не все варианты сборки MiniOS, рекомендуем попробовать:
-              <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 margin-bottom-2 ae-3">
-                <div class="pad" style="background: #F5FBFE">
-                  <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
-                    <ul class="p tiny">
-                      <li class="opacity-8">Все стабильные версии, включая сборки на базе Debian Buster, Debian Sid, сборки с архитектурой i386 и сборки с поддержкой aufs.</li>
-                    </ul>
-                  </div>
-                  <a href="#" class="button black gradient wide cropSides cropBottom ae-7">Стабильные сборки</a>
+    <!-- Slide 5 (#85) -->
+    <section data-name="more" class="slide fade-6 kenBurns">
+        <div class="content">
+            <div class="container">
+                <div class="wrap">
+
+                    <div class="fix-7-12">
+                        <!--h1 class="ae-1 fromTop"><svg style="width:153px;height:35px">
+                                <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#logo"></use>
+                            </svg></h1-->
+                        <li class="ae-1 fromTop">
+                            <img class="ae-1 rounded" width="650" src="assets/img/ultra1.jpg" alt="MiniOS Ultra" />
+                        </li>
+                        <ul class="grid grid-85 equal margin-top-5 ae-2 fromCenter" data-equal-collapse-width="767">
+                            <p class="ae-5 fromTop"><span class="opacity-8">Благодарим за загрузку MiniOS. Загрузка
+                                    должна начаться в ближайшее время. Если это не так, нажмите </span><a
+                                    href="https://ftp.minios.dev/nightly-links/minios-bullseye-xfce-ultra-ru-amd64-zstd.iso"
+                                    data-auto-download>здесь</a><span class="opacity-8">.</span></p>
+                            <p class="ae-6 fromTop verticalCenter reverse"><span class="opacity-8 bold"><a
+                                        href="https://github.com/minios-linux/minios-live.wiki.git">Как установить MiniOS?</a></span></p>
+                            <p class="ae-7 fromTop verticalCenter reverse"><span class="opacity-8">На сайте
+                                    представлены не все варианты сборки MiniOS, рекомендуем попробовать:
+                                    <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 margin-bottom-2 ae-3">
+                                        <div class="pad" style="background: #F5FBFE">
+                                            <div class="margin-top-3 margin-bottom-3 equalElement ae-6">
+                                                <ul class="p tiny">
+                                                    <li class="opacity-8">Все стабильные версии, включая сборки на
+                                                        английском языке, сборки базе Debian Buster, Debian Sid, сборки
+                                                        с архитектурой i386 и сборки с поддержкой aufs.</li>
+                                                </ul>
+                                            </div>
+                                            <a href="#"
+                                                class="button black gradient wide cropSides cropBottom ae-7">Стабильные
+                                                сборки</a>
+                                        </div>
+                                    </li>
+                                    <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 margin-bottom-2 ae-4">
+                                        <div class="pad">
+                                            <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
+                                                <ul class="p tiny">
+                                                    <li class="opacity-8">
+                                                    <li class="opacity-8">Все тестовые версии (могут содержать ошибки,
+                                                        но чаще всего работоспособные), включая сборки на английском
+                                                        языке, сборки на базе Debian Buster, Debian Sid, сборки с
+                                                        архитектурой i386 и сборки с поддержкой aufs.</li>
+                                    </li>
+                        </ul>
+                    </div>
+                    <a href="#" class="button black gradient wide cropSides cropBottom ae-8">Тестовые сборки</a>
                 </div>
-              </li>
-              <li class="col-6-12 col-tablet-1-2 col-phablet-1-1 margin-bottom-2 ae-4">
-                <div class="pad">
-                  <div class="margin-top-3 margin-bottom-3 equalElement ae-7">
-                    <ul class="p tiny">
-                      <li class="opacity-8"><li class="opacity-8">Все тестовые версии (могут содержать ошибки, но чаще всего работоспособные), включая сборки на базе Debian Buster, Debian Sid, сборки с архитектурой i386 и сборки с поддержкой aufs.</li></li>
-                    </ul>
-                  </div>
-                  <a href="#" class="button black gradient wide cropSides cropBottom ae-8">Тестовые сборки</a>
-                </div>
-              </li>
-            </ul>
-          </div> 
-          
+                </li>
+                </ul>
+            </div>
+
         </div>
-      </div>
-    </div>
-    <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
-  </section>
+        </div>
+        </div>
+        <div class="background" style="background-image:url(assets/img/background/background-black.jpg)"></div>
+    </section>
 
     <script>
         $(function () {
